# noosphere

./: .env.example  .gitignore  DOCKER.md  README.md  conf.example.yaml  docker-compose.yml  noo-telegram-batch  pyproject.toml  pytest.ini  setup.py
noosphere/telegram/batch/: __main__.py  config.py  logging.py  schema.py
noosphere/telegram/batch/pipelines/: process.py
noosphere/telegram/batch/services/: embedding.py  llm.py
noosphere/telegram/batch/transforms/: message_aggregation.py  window.py
noosphere/telegram/batch/transforms/image/: __main__.py  summarize.py
noosphere/telegram/batch/transforms/storage/: qdrant.py
tests/a_unit/: README.md  conftest.py  test_config.py  test_logging.py  test_logging_config.py  test_pipelines_process.py  test_schema.py
tests/a_unit/services/: test_services.py
tests/a_unit/transforms/: test_message_aggregation.py  test_window.py
tests/a_unit/transforms/image/: test_image_summarize.py
tests/a_unit/transforms/storage/: test_qdrant.py
tests/a_unit/transforms/text/: test_text_summarize.py  test_text_vectorize.py
tests/b_integration/: README.md  conftest.py  test_beam_logging.py  test_logging_integration.py  test_pipeline.py
tests/b_integration/transforms/image/: test_image_summarize_integration.py
tests/b_integration/transforms/storage/: test_qdrant_integration.py
tests/b_integration/transforms/text/: test_text_summarize_integration.py  test_text_vectorize_integration.py
tests/data/: README.md
tests/data/private_channel/12345678/: .messages.jsonl.un~  messages.jsonl
tests/data/window/: window.jsonl
(+2 files in other folders)
