[project]
name = "noosphere"
version = "0.1.0"
description = "An internet of knowledge graphs with progressive summarization"
authors = [
    {name = "Allen Day",email = "allenday@allenday.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "apache-beam[gcp]>=2.49.0,<3.0.0",
    "httpx>=0.27.0,<1.0.0",
    "qdrant-client>=1.7.3,<2.0.0",
    "loguru>=0.7.0,<0.8.0",
    "PyYAML>=6.0.0,<7.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
